<resources>
    <string name="app_name">账户管理</string>
    <string name="create_activity_welcome">欢迎使用 账户管理</string>
    <string name="create_activity_first">第一次使用，请先设置密码</string>
    <string name="create_activity_warn">绘制解锁图案</string>
    <string name="finger_press">完成后松开手指</string>
    <string name="finger_up_first_error">至少连接4个点，请重试</string>
    <string name="finger_up_first_success">请在次绘制解锁图案</string>
    <string name="finger_up_second_error">与上次输入不一致，请重试</string>
    <string name="finger_up_second_success">绘制成功</string>
    <string name="check_default">请绘制手势密码，来解锁</string>
    <string name="check_error">手势密码错误，请重试</string>
    <string name="change_theme_key">change_theme_key</string>
    <string name="devString">.</string>
    <string name="app_name_ad">简单的账户记录工具</string>
    <string name="app_version">版本：3.1</string>
    <string name="app_aboutDes">业精于勤，荒于嬉；行成于思，毁于随。</string>
    <string name="aboutTeam">XUANM</string>

    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="just_now">刚刚</string>
    <string name="before_half_hour">半个小时之前</string>
    <string name="before_hour" formatted="false">%d\u0020小时之前</string>
    <string name="before_day" formatted="false">%d\u0020天之前</string>
    <string name="before_month" formatted="false">%d\u0020个月之前</string>
    <string name="before_year" formatted="false">%d\u0020年之前</string>
    <!-- 密码锁-->
    <string name="lockscreen_access_pattern_start">"Draw an unlock pattern"</string>
    <string name="lockscreen_access_pattern_cleared">"Pattern Ereased"</string>
    <string name="lockscreen_access_pattern_cell_added">"已添加单元格"</string>
    <string name="lockscreen_access_pattern_detected">"Pattern Saved"</string>
    <string name="lockpattern_retry_button_text">"Retry"</string>
    <string name="lockpattern_continue_button_text">"Continue"</string>
    <string name="lockpattern_confirm_button_text">"Confirm"</string>
    <string name="lockpattern_recording_intro_header">"Draw a pattern to unlock"</string>
    <string name="lockpattern_settings_help_how_to_record">"How to draw an unlock pattern"</string>
    <string name="lockpattern_recording_incorrect_too_short">"Connect at least 4 dots.Try agin."</string>
    <string name="lockpattern_pattern_entered_header">"Pattern Recorded"</string>
    <string name="lockpattern_need_to_confirm">"Draw pattern again to confirm"</string>
    <string name="lockpattern_need_to_unlock_wrong">"Sorry,try again"</string>
    <string name="lockpattern_pattern_confirmed_header">"Confirm saved pattern"</string>
    <string name="lockpattern_recording_inprogress">"Release finger when done"</string>
    <string name="gesture_password_guide_text">Set up a unlock pattern to protect your privacy from being </string>
    <string name="gesture_password_guide_creat_btn">Set up a pattern lock</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="edit_company">
        <item>谷歌</item>
    </string-array>

    <string name="edit_mode">编辑</string>
    <string name="view_mode">查看</string>
    <string name="create_mode">添加</string>
</resources>
